--- a/config.toml
+++ b/config.toml
@@ -702,12 +702,12 @@ uglyURLs = false
     # Note: render only in production
     #       environment
 
-    enableGoogleAnalytics = false
+    enableGoogleAnalytics = true
 
     trackingCodeType = "gtag"
     # Note: gtag or analytics
 
-    trackingID = ""
+    trackingID = "UA-64805347-2"
 
 
     ######################################
