--- a/config.toml
+++ b/config.toml
@@ -50,9 +50,107 @@ uglyURLs = false
   [languages.en]
     languageName = "English"
     weight = 1
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        url = "/posts/"
+        name = "Posts"
+        weight = 2
+        pre = "internal"
+        post = "archive"
+      [[languages.en.menu.main]]
+        url = "/faq/"
+        name = "FAQ"
+        weight = 3
+        pre = "internal"
+        post = "question"
+      [[languages.en.menu.main]]
+        url = "/personal/"
+        name = "Personal"
+        weight = 4
+        pre = "internal"
+        post = "archive"
+
+      [[languages.en.menu.main]]
+        url = "/categories/"
+        name = "Categories"
+        weight = 5
+        pre = "internal"
+        post = "th"
+      [[languages.en.menu.main]]
+        url = "/tags/"
+        name = "Tags"
+        weight = 6
+        pre = "internal"
+        post = "tags"
+      [[languages.en.menu.main]]
+        url = "/about/"
+        name = "About"
+        weight = 7
+        pre = "internal"
+        post = "user-circle"
+      [[languages.en.menu.main]]
+        weight = 8
+        identifier = "theme-switcher"
+      [[languages.en.menu.main]]
+        weight = 9
+        identifier = "lang-switcher"
+      [[languages.en.menu.main]]
+        weight = 10
+        identifier = "search"
+        post = "search"
+        
   [languages.pl]
     languageName = "Polski"
     weight = 2
+    [languages.pl.menu]
+      [[languages.pl.menu.main]]
+        url = "/pl/posts/"
+        name = "Posty"
+        weight = 2
+        pre = "internal"
+        post = "archive"
+      [[languages.pl.menu.main]]
+        url = "/pl/faq/"
+        name = "FAQ"
+        weight = 3
+        pre = "internal"
+        post = "question"
+      [[languages.pl.menu.main]]
+        url = "/pl/personal/"
+        name = "Rzeczy osobiste"
+        weight = 4
+        pre = "internal"
+        post = "archive"
+
+      [[languages.pl.menu.main]]
+        url = "/pl/categories/"
+        name = "Kategorie"
+        weight = 5
+        pre = "internal"
+        post = "th"
+      [[languages.pl.menu.main]]
+        url = "/pl/tags/"
+        name = "Tagi"
+        weight = 6
+        pre = "internal"
+        post = "tags"
+      [[languages.pl.menu.main]]
+        url = "/pl/about/"
+        name = "O mnie"
+        weight = 7
+        pre = "internal"
+        post = "user-circle"
+      [[languages.pl.menu.main]]
+        weight = 8
+        identifier = "theme-switcher"
+      [[languages.pl.menu.main]]
+        weight = 9
+        identifier = "lang-switcher"
+      [[languages.pl.menu.main]]
+        weight = 10
+        identifier = "search"
+        post = "search"
+
 
 
 # URL structure
@@ -198,61 +296,7 @@ uglyURLs = false
 #               flex: `theme-switcher`,
 #               `lang-switcher`, `search`)
 
-[menu]
-    ## Menu bar
-    # [[menu.main]]
-    #     url = "/"
-    #     name = "Home"
-    #     weight = 1
-    #     pre = "internal"
-    #     post = "home"
-    [[menu.main]]
-        url = "/posts/"
-        name = "Articles"
-        weight = 2
-        pre = "internal"
-        post = "archive"
-    [[menu.main]]
-        url = "/faq/"
-        name = "FAQ"
-        weight = 3
-        pre = "internal"
-        post = "question"
-    [[menu.main]]
-        url = "/personal/"
-        name = "Personal"
-        weight = 4
-        pre = "internal"
-        post = "archive"
 
-    [[menu.main]]
-        url = "/categories/"
-        name = "Categories"
-        weight = 5
-        pre = "internal"
-        post = "th"
-    [[menu.main]]
-        url = "/tags/"
-        name = "Tags"
-        weight = 6
-        pre = "internal"
-        post = "tags"
-    [[menu.main]]
-        url = "/about/"
-        name = "About"
-        weight = 7
-        pre = "internal"
-        post = "user-circle"
-    [[menu.main]]
-        weight = 8
-        identifier = "theme-switcher"
-    [[menu.main]]
-        weight = 9
-        identifier = "lang-switcher"
-    [[menu.main]]
-        weight = 10
-        identifier = "search"
-        post = "search"
 
 
 
@@ -315,7 +359,7 @@ uglyURLs = false
     # Note: invalid for header layout flex
 
     # Highlight current menu item by section?
-    activeInSection = false
+    activeInSection = true
     # Note: if true, the menu item in the
     #       post page will be highlighted
     #       also if that post’s section is
@@ -747,7 +791,7 @@ uglyURLs = false
     #            supported
 
     # The content width of the post
-    postWidth = 36
+    postWidth = 70
     # Note: you can leave it empty("") to
     #       fallback to the default value: 42
     #       Unit: em
