feat: working lists i18n, not working single posts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
           "@components/*": ["src/components/*"],
           "@layouts/*": ["src/layouts/*"]
         }
-      }
+      },
+      "include": ["next-env.d.ts", "**/*.ts", "**/*.astro"]
 }
