--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "jpalczewski",
   "license": "ISC",
   "dependencies": {
+    "@astrojs/prefetch": "^0.3.0",
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/ts-plugin": "^1.1.1",
     "astro": "^2.10.3"
