--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
   "eslint.packageManager": "pnpm",
   "npm.packageManager": "pnpm",
   "devDependencies": {
+    "@typescript-eslint/parser": "^6.3.0",
+    "eslint": "^8.46.0",
+    "eslint-plugin-astro": "^0.28.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "prettier": "^3.0.1",
+    "prettier-plugin-astro": "^0.11.0",
     "typescript": "^5.1.6"
   }
 }
