--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "eslint.packageManager": "pnpm",
   "npm.packageManager": "pnpm",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "eslint": "^8.46.0",
     "eslint-plugin-astro": "^0.28.0",
