--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/tailwind": "^4.0.0",
     "@astrojs/ts-plugin": "^1.1.1",
     "astro": "^2.10.3",
+    "astro-robots-txt": "^0.5.0",
     "svelte": "^4.0.0",
     "tailwindcss": "^3.0.24"
   },
@@ -32,6 +33,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^3.5.1",
     "eslint": "^8.46.0",
     "eslint-plugin-astro": "^0.28.0",
@@ -39,5 +41,10 @@
     "prettier": "^3.0.1",
     "prettier-plugin-astro": "^0.11.0",
     "typescript": "^5.1.6"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
