fix: test custom action - fix missing properties

--- a/.github/actions/build-astro/action.yml
+++ b/.github/actions/build-astro/action.yml
@@ -6,12 +6,16 @@ runs:
   steps:
     - name: Checkout your repository using git
       uses: actions/checkout@v3
+      shell: bash
 
     - uses: pnpm/action-setup@v2
       with:
         version: latest
+      shell: bash
     - uses: actions/setup-node@v3
       with:
         node-version: '20'
         cache: 'pnpm'
+      shell: bash
     - run: pnpm install
+      shell: bash
