--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "check": "astro check",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint --quiet --fix"
   },
   "keywords": [],
   "author": "jpalczewski",
@@ -38,9 +39,12 @@
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^3.5.1",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-astro": "^0.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
+    "lint-staged": "^14.0.0",
     "prettier": "^3.0.1",
     "prettier-plugin-astro": "^0.11.0",
     "typescript": "^5.1.6",
@@ -50,5 +54,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts, cjs}": ["pnpm lint", "prettier --write"]
   }
 }
