--- a/.github/actions/build-astro/action.yml
+++ b/.github/actions/build-astro/action.yml
@@ -11,7 +11,7 @@ runs:
         version: latest
     - uses: actions/setup-node@v3
       with:
-        node-version: '20'
-        cache: 'pnpm'
+        node-version: "20"
+        cache: "pnpm"
     - run: pnpm install
       shell: bash
