--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,10 @@ on:
   # Trigger the workflow every time you push to the `main` branch
   # Using a different branch name? Replace `main` with your branch’s name
   push:
-    branches: [ master ]
+    branches: [master]
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
-  
+
 # Allow this job to clone the repo and create a page deployment
 permissions:
   contents: read
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
-      
+
       - name: Build environment
         uses: ./.github/actions/build-astro
 
@@ -33,8 +33,8 @@ jobs:
         env:
           SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}
         with:
-          source-directory: 'dist'
-          destination-github-username: 'jpalczewski'
-          destination-repository-name: 'jpalczewski.github.io'
+          source-directory: "dist"
+          destination-github-username: "jpalczewski"
+          destination-repository-name: "jpalczewski.github.io"
           user-email: actions@github.com
           target-branch: master
