--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
-    "eslint.validate": [
-      "javascript",
-      "astro", // Enable .astro
-      "typescript", // Enable .ts
-    ],
-    
-  }
+  "eslint.validate": [
+    "javascript",
+    "astro", // Enable .astro
+    "typescript" // Enable .ts
+  ]
+}
