--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: check
+    environment:
+      name: github-pages
+      url: "https://jpalczewski.github.io"
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
