--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts, cjs, astro, md}": [
+    "*.{js,ts,cjs,astro,md,yml}": [
       "pnpm lint",
       "prettier --write"
     ]
