--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-astro": "^0.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-markdownlint": "^0.5.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.0",
@@ -56,7 +57,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,cjs,astro,md,yml}": [
+    "*.{js,ts,cjs,astro,yml,md}": [
       "pnpm lint",
       "prettier --write"
     ]
