--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
-    "@astro-community/astro-embed-youtube": "^0.4.0",
+    "@astro-community/astro-embed-youtube": "^0.4.1",
+    "@astrojs/check": "^0.2.0",
     "@astrojs/partytown": "^1.2.3",
     "@astrojs/prefetch": "^0.3.0",
     "@astrojs/sitemap": "^2.0.2",
-    "@astrojs/svelte": "^3.1.1",
-    "@astrojs/tailwind": "^4.0.0",
-    "@astrojs/ts-plugin": "^1.1.1",
-    "astro": "^2.10.12",
+    "@astrojs/svelte": "^4.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/ts-plugin": "^1.1.3",
+    "astro": "^3.0.2",
     "astro-robots-txt": "^0.5.0",
     "svelte": "^4.2.0",
     "tailwindcss": "^3.3.3"
@@ -37,11 +38,11 @@
   "npm.packageManager": "pnpm",
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "cz-conventional-changelog": "^3.3.0",
-    "daisyui": "^3.5.1",
-    "eslint": "^8.47.0",
+    "daisyui": "^3.6.4",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-astro": "^0.28.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -49,9 +50,9 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.2",
+    "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.11.1",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
   "config": {
