--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@astrojs/svelte": "^4.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
-    "astro": "^3.0.2",
+    "astro": "^3.0.6",
+    "astro-eslint-parser": "^0.15.0",
     "astro-robots-txt": "^0.5.0",
     "svelte": "^4.2.0",
     "tailwindcss": "^3.3.3"
@@ -51,7 +52,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.11.1",
+    "prettier-plugin-astro": "^0.12.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
