chore: set typescript in vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "javascript",
     "astro", // Enable .astro
     "typescript" // Enable .ts
-  ]
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
