--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro": "^3.0.7",
     "astro-eslint-parser": "^0.15.0",
     "astro-robots-txt": "^0.5.0",
+    "astro-seo": "^0.8.0",
     "svelte": "^4.2.0",
     "tailwindcss": "^3.3.3"
   },
