--- a/src/content/project/entuzjazm.yaml
+++ b/src/content/project/entuzjazm.yaml
@@ -11,3 +11,10 @@ description:
     string: Project behind site you are reading right now.
 link: https://github.com/jpalczewski/entuzjazm
 startDate:  "2023-08-08T12:23:43-02:00"
+tags:
+  - github
+  - typescript
+  - html
+  - tailwindcss
+  - astro
+  
