--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-svelte": "^3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
