feat(project): style tags in project tab

--- a/src/content/project/sajna.yaml
+++ b/src/content/project/sajna.yaml
@@ -13,7 +13,7 @@ link: https://apd.uwm.edu.pl/diplomas/56523/
 startDate:  "2023-08-08T12:23:43-02:00"
 tags:
   - LoRa
-  - C#
+  - Csharp
   - Protocol Buffer
   - STM32
   - C
