build(pnpm): cover svelte files in linting

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,cjs,astro,yml,md}": [
+    "*.{js,ts,cjs,astro,yml,md,svelte}": [
       "pnpm lint",
       "prettier --write"
     ]
