--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
     "astro": "^3.0.8",
+    "astro-compress": "^2.0.15",
     "astro-eslint-parser": "^0.15.0",
+    "astro-purgecss": "^3.0.0",
     "astro-robots-txt": "^0.5.0",
     "astro-seo": "^0.8.0",
     "svelte": "^4.2.0",
