--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "check": "astro check",
+    "dev": "bun --bun astro dev",
+    "prod": "bun --bun astro build",
+    "check": "bun --bun astro check",
     "prepare": "husky install",
     "lint": "eslint --quiet --fix",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
@@ -27,11 +25,13 @@
     "@astrojs/tailwind": "^5.0.0",
     "@astrojs/ts-plugin": "^1.1.3",
     "astro": "^3.1.2",
-    "astro-compress": "^2.0.15",
+    "astro-compress": "astro-community/AstroCompress#no-sharp",
     "astro-eslint-parser": "^0.15.0",
     "astro-purgecss": "^3.0.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
+    "cssnano": "^6.0.1",
+    "sharp": "^0.32.6",
     "svelte": "^4.2.0",
     "tailwindcss": "^3.3.3"
   },
@@ -44,6 +44,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.7.2",
+    "bun-types": "^1.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "daisyui": "^3.7.5",
     "eslint": "^8.50.0",
@@ -57,6 +58,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
     "prettier-plugin-svelte": "^3.0.3",
+    "purgecss": "^5.0.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
