--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,9 +28,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build environment
-        uses: ./.github/actions/build-astro
-
-      - run: pnpm build
+        uses: oven-sh/setup-bun@v1
+      
+      - run: bun install
+      - run: bun prod
 
       - uses: cpina/github-action-push-to-another-repository@main
         env:
